@@ -143,10 +143,12 @@
     <Compile Include="Facilities\TypedFactory\Factories\IFactoryById.cs" />
     <Compile Include="Facilities\TypedFactory\Factories\IGenericFactory.cs" />
     <Compile Include="Facilities\TypedFactory\Factories\InvalidDummyComponentListFactory.cs" />
+    <Compile Include="Facilities\TypedFactory\Selectors\Component2Selector.cs" />
     <Compile Include="Facilities\TypedFactory\Selectors\FooSelector.cs" />
     <Compile Include="Facilities\TypedFactory\Selectors\MultipleSelector.cs" />
     <Compile Include="Facilities\TypedFactory\Selectors\SelectorByClosedArgumentType.cs" />
     <Compile Include="Facilities\TypedFactory\Selectors\SelectorById.cs" />
+    <Compile Include="Facilities\TypedFactory\Selectors\Component1Selector.cs" />
     <Compile Include="Installers\CustomerInstaller.cs" />
     <Compile Include="Installer\FromAssemblyInstallersTestCase.cs" />
     <Compile Include="Components\UsesIEmptyService.cs" />
