@@ -20,6 +20,7 @@ namespace Castle.Facilities.TypedFactory
 	using Castle.Core;
 	using Castle.DynamicProxy;
 	using Castle.MicroKernel;
+	using Castle.MicroKernel.Proxy;
 	using Castle.MicroKernel.Registration;
 
 	public static class TypedFactoryRegistrationExtensions
@@ -27,7 +28,7 @@ namespace Castle.Facilities.TypedFactory
 		/// <summary>
 		/// Marks the component as typed factory.
 		/// </summary>
-		/// <typeparam name="S"></typeparam>
+		/// <typeparam name="TFactoryInterface"></typeparam>
 		/// <param name="registration"></param>
 		/// <returns></returns>
 		/// <remarks>
@@ -36,34 +37,102 @@ namespace Castle.Facilities.TypedFactory
 		/// Typed factories rely on <see cref="IInterceptorSelector"/> set internally, so users should not set interceptor selectors explicitly;
 		/// otherwise the factory will not function correctly.
 		/// </remarks>
-		public static ComponentRegistration<S> AsFactory<S>(this ComponentRegistration<S> registration)
+		public static ComponentRegistration<TFactoryInterface> AsFactory<TFactoryInterface>(this ComponentRegistration<TFactoryInterface> registration)
 		{
-			if( registration == null )
+			return AsFactory(registration, null);
+		}
+
+		/// <summary>
+		/// Marks the component as typed factory.
+		/// </summary>
+		/// <typeparam name="TFactoryInterface"></typeparam>
+		/// <param name="registration"></param>
+		/// <param name="configuration"></param>
+		/// <returns></returns>
+		/// <remarks>
+		/// Only interfaces are legal to use as typed factories. Methods with out parameters are not allowed.
+		/// When registering component as typed factory no implementation should be provided (in case there is any it will be ignored).
+		/// Typed factories rely on <see cref="IInterceptorSelector"/> set internally, so users should not set interceptor selectors explicitly;
+		/// otherwise the factory will not function correctly.
+		/// </remarks>
+		public static ComponentRegistration<TFactoryInterface> AsFactory<TFactoryInterface>(this ComponentRegistration<TFactoryInterface> registration, Action<TypedFactoryConfiguration> configuration)
+		{
+			if (registration == null)
 			{
-				throw new ArgumentNullException( "registration" );
+				throw new ArgumentNullException("registration");
 			}
 
 			if (registration.ServiceType.IsInterface == false)
 			{
 				throw new ComponentRegistrationException(
 					string.Format("Type {0} is not an interface. Only interfaces may be used as typed factories.",
-					              registration.ServiceType));
+								  registration.ServiceType));
 			}
 
-			if(HasOutArguments(registration.ServiceType))
+			if (HasOutArguments(registration.ServiceType))
 			{
 				throw new ComponentRegistrationException(
 					string.Format("Type {0} can not be used as typed factory because it has methods with 'out' arguments.",
-					              registration.ServiceType));
+								  registration.ServiceType));
 			}
 
-			return registration.Interceptors( new InterceptorReference( TypedFactoryFacility.InterceptorKey ) ).Last;
+
+			var componentRegistration = registration.Interceptors(new InterceptorReference(TypedFactoryFacility.InterceptorKey)).Last;
+
+			if (configuration == null)
+			{
+				return componentRegistration;
+			}
+
+			var factoryConfiguration = new TypedFactoryConfiguration();
+			configuration.Invoke(factoryConfiguration);
+			var selectorReference = factoryConfiguration.Reference;
+			if (selectorReference == null)
+			{
+				return componentRegistration;
+			}
+
+			return componentRegistration
+				.DynamicParameters((k, c, d) =>
+				{
+					var selector = selectorReference.Resolve(k, c);
+					d.Insert((ITypedFactoryComponentSelector)selector);
+					return k2 => k2.ReleaseComponent(selector);
+				});
 
 		}
 
 		private static bool HasOutArguments(Type serviceType)
 		{
 			return serviceType.GetMethods().Any(m => m.GetParameters().Any(p => p.IsOut));
+		}
+	}
+
+	public class TypedFactoryConfiguration
+	{
+		internal IReference<object> Reference
+		{
+			get; private set;
+		}
+
+		public void SelectedWith(string selectorComponentName)
+		{
+			Reference = new ComponentReference<object>(selectorComponentName);
+		}
+
+		public void SelectedWith<TSelectorComponent>() where TSelectorComponent : ITypedFactoryComponentSelector
+		{
+			Reference = new ComponentReference(typeof(TSelectorComponent));
+		}
+
+		public void SelectedWith(ITypedFactoryComponentSelector selector)
+		{
+			if (selector == null)
+			{
+				throw new ArgumentNullException("selector");
+			}
+
+			Reference = new InstanceReference<object>(selector);
 		}
 	}
 }
